Adapt SCSS to fix IE11 fieldname truncation (#63234)

--- a/src/legacy/core_plugins/kibana/public/discover/np_ready/_discover.scss
+++ b/src/legacy/core_plugins/kibana/public/discover/np_ready/_discover.scss
@@ -141,6 +141,7 @@ discover-app {
 .dscSidebarItem__label {
   overflow: hidden; /* 1 */
   text-overflow: ellipsis; /* 1 */
+  width: 100%;
 }
 
 /**
